package pe.mil.microservices.components.enums;

public enum MilitarValidationResult {

    MILITAR_VALID,
    INVALID_MILITAR_ID,
    INVALID_MILITAR_CIP,
    INVALID_PERSON,
    INVALID_GRADE,
    INVALID_SPECIALTY;
}
