package pe.mil.microservices.constants;

import lombok.experimental.UtilityClass;

@UtilityClass
public class RepositoryEntitiesConstants {

    public static final String ENTITY_MILITAR = "MILITAR";
    public static final String ENTITY_MILITAR_ID = "MILITAR_ID";
    public static final String ENTITY_MILITAR_CIP = "CIP";
    public static final String ENTITY_PERSON_ID = "PERSON_ID";
    public static final String ENTITY_GRADE_ID = "GRADE_ID";
    public static final String ENTITY_SPECIALTY_ID = "SPECIALTY_ID";


    public static final String ENTITY_GRADE = "GRADE";
    public static final String ENTITY_GRADES_ID = "GRADE_ID";
    public static final String ENTITY_GRADES_NAME = "NAME";
    public static final String ENTITY_GRADES_DESCRIPTION = "DESCRIPTION";

    public static final String ENTITY_PERSON = "PERSON";
    public static final String ENTITY_PERSON_LAST_NAME = "LAST_NAME";
    public static final String ENTITY_PERSON_NAME = "NAME";
    public static final String ENTITY_PERSON_DOCUMENT_NUMBER = "DOCUMENT_NUMBER";

    public static final String ENTITY_SPECIALTY = "SPECIALTY";
    public static final String ENTITY_SPECIALTY_NAME = "NAME";
    public static final String ENTITY_SPECIALTY_DESCRIPTION = "DESCRIPTION";

}
